--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
 					</svg>
 				</a>
         {% for page in site.pages %}
-          {% if page.title %}
+          {% if page.navbar %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
