--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,6 +31,7 @@
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
+        <a class="page-link-accent" href="http://www.ccas.ru/kksitevc/conf2019/index.html">Конференция 2019</a>
       </div>
     </nav>
 
