--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,6 +32,7 @@
           {% endif %}
         {% endfor %}
         <a class="page-link-accent" href="http://www.ccas.ru/kksitevc/conf2019/index.html">Конференция 2019</a>
+				<a class="page-link-accent" style="background-color:purple;" href="http://810b.mai.moscow/index.html">Базовая кафедра ФИЦ ИУ РАН в МАИ</a>
       </div>
     </nav>
 
